--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -118,10 +118,73 @@
             android:paddingRight="16dp">
 
             <TextView
+                android:id="@+id/text_quantity_desired"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingBottom="20dp"
+                android:text="Fuel to buy"
+                app:layout_constraintTop_toBottomOf="@id/text_price_label" />
+
+            <Button
+                android:id="@+id/increase_quantity_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="+"
+                app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
+                app:layout_constraintLeft_toRightOf="@id/text_quantity_desired" />
+
+            <TextView
+                android:id="@+id/quantity_tracker"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="0"
+                app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
+                app:layout_constraintLeft_toRightOf="@+id/increase_quantity_button" />
+
+            <Button
+                android:id="@+id/decrease_quantity_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:text="@string/minus"
+                app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
+                app:layout_constraintLeft_toRightOf="@id/quantity_tracker" />
+
+            <TextView
+                android:id="@+id/text_ship_max_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:paddingTop="25dp"
+                android:paddingEnd="10dp"
+                android:text="Max Ship Fuel: "
+                app:layout_constraintTop_toBottomOf="@id/text_quantity_desired" />
+
+            <TextView
+                android:id="@+id/text_ship_max"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:paddingTop="25dp"
+                android:paddingEnd="16dp"
+                android:text="0"
+                app:layout_constraintTop_toTopOf="@id/text_total_price_label"
+                app:layout_constraintLeft_toRightOf="@id/text_total_price_label" />
+        </LinearLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+
+            <TextView
                 android:id="@+id/fuel_price_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fuel Price: $"
+                android:text="Total Fuel Price: $"
                 tools:layout_editor_absoluteX="60dp" />
 
             <TextView
