--- a/app/src/main/res/layout/market_activity.xml
+++ b/app/src/main/res/layout/market_activity.xml
@@ -17,6 +17,17 @@
         android:text="Name"/>
 
     <TextView
+        android:id="@+id/remaining_cargo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintRight_toLeftOf="@id/credits_label"
+        android:text="Remaining Cargo: "/>
+
+    <TextView
         android:id="@+id/credits_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
