--- a/app/src/main/res/layout/police_activity.xml
+++ b/app/src/main/res/layout/police_activity.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/intro_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You have been stopped by the police!"
+            android:layout_marginRight="20dp"
+            tools:layout_editor_absoluteX="60dp" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
