--- a/app/src/main/res/layout/pirate_activity.xml
+++ b/app/src/main/res/layout/pirate_activity.xml
@@ -16,7 +16,7 @@
 
 
         <TextView
-            android:id="@+id/intro_message"
+            android:id="@+id/intro_message_pirate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="You have been attacked by pirates!"
