--- a/app/src/main/res/layout/police_activity.xml
+++ b/app/src/main/res/layout/police_activity.xml
@@ -16,7 +16,7 @@
 
 
         <TextView
-            android:id="@+id/intro_message"
+            android:id="@+id/intro_message_police"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="You have been stopped by the police!"
