--- a/app/src/main/res/layout/police_activity.xml
+++ b/app/src/main/res/layout/police_activity.xml
@@ -12,16 +12,44 @@
         android:orientation="vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="42dp">
 
 
         <TextView
             android:id="@+id/intro_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/police_warning"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/directions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You have been stopped by the police!"
-            android:layout_marginRight="20dp"
-            tools:layout_editor_absoluteX="60dp" />
+            android:text="@string/police_directions"
+
+            />
+
+        <Button
+            android:id="@+id/accept_check_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/accept" />
+
+        <Button
+            android:id="@+id/bribe_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/bribe" />
+
+        <Button
+            android:id="@+id/flee_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/flee" />
 
     </LinearLayout>
 
