--- a/app/src/main/res/layout/police_activity.xml
+++ b/app/src/main/res/layout/police_activity.xml
@@ -18,7 +18,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/warning_logo"
             android:layout_width="119dp"
             android:layout_height="130dp"
             android:layout_gravity="center"
