--- a/app/src/main/res/layout/config.xml
+++ b/app/src/main/res/layout/config.xml
@@ -40,8 +40,7 @@
                 android:layout_marginEnd="136dp"
                 android:layout_marginBottom="8dp"
                 android:importantForAutofill="no"
-                android:inputType="text"
-                android:labelFor="name" />
+                android:inputType="text" />
     </LinearLayout>
 
         <TextView
