--- a/app/src/main/res/layout/cargo_activity.xml
+++ b/app/src/main/res/layout/cargo_activity.xml
@@ -20,12 +20,8 @@
         android:id="@+id/remaining_cargo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintRight_toLeftOf="@id/credits_label"
-        android:text="Remaining Cargo: "/>
+        android:text="Remaining Cargo: "
+        tools:layout_editor_absoluteX="168dp" />
 
     <TextView
         android:id="@+id/credits_label"
@@ -52,9 +48,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="729dp"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        tools:layout_editor_absoluteY="2dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/cargoRecycler"
