--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Market Item"
+            android:text="@string/market_item"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,18 +32,19 @@
             android:id="@+id/text_price_label"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="72dp"
             android:maxLines="1"
             android:paddingEnd="15dp"
-            android:text="Price"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="37dp" />
+            android:text="@string/price"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text_price"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="72dp"
             android:maxLines="1"
             android:paddingEnd="15dp"
             android:text="##"
@@ -57,7 +58,7 @@
             android:layout_marginTop="76dp"
             android:maxLines="1"
             android:paddingEnd="15dp"
-            android:text="Quantity"
+            android:text="@string/quantity"
             app:layout_constraintRight_toLeftOf="@+id/text_quantity"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="37dp" />
@@ -77,43 +78,48 @@
             android:id="@+id/text_quantity_desired"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:paddingTop="8dp"
             android:paddingBottom="20dp"
-            android:text="Quantity to buy"
+            android:text="@string/quantity_to_buy"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_price_label" />
 
         <Button
             android:id="@+id/increase_quantity_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:text="+"
-            app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
-            app:layout_constraintLeft_toRightOf="@id/text_quantity_desired" />
+            android:text="@string/add"
+            app:layout_constraintLeft_toRightOf="@id/text_quantity_desired"
+            app:layout_constraintTop_toTopOf="@id/text_quantity_desired" />
 
         <TextView
             android:id="@+id/quantity_tracker"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:text="0"
-            app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
-            app:layout_constraintLeft_toRightOf="@+id/increase_quantity_button" />
+            app:layout_constraintLeft_toRightOf="@+id/increase_quantity_button"
+            app:layout_constraintTop_toTopOf="@id/text_quantity_desired" />
 
         <Button
             android:id="@+id/decrease_quantity_button"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:text="@string/minus"
-            app:layout_constraintTop_toTopOf="@id/text_quantity_desired"
-            app:layout_constraintLeft_toRightOf="@id/quantity_tracker" />
+            app:layout_constraintLeft_toRightOf="@id/quantity_tracker"
+            app:layout_constraintTop_toTopOf="@id/text_quantity_desired" />
 
         <TextView
             android:id="@+id/text_total_price_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:maxLines="1"
             android:paddingTop="25dp"
             android:paddingEnd="16dp"
-            android:text="Total Price: "
+            android:text="@string/total_price"
+            app:layout_constraintEnd_toStartOf="@+id/transaction_button"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_quantity_desired" />
 
         <TextView
@@ -124,8 +130,8 @@
             android:paddingTop="25dp"
             android:paddingEnd="16dp"
             android:text="0"
-            app:layout_constraintTop_toTopOf="@id/text_total_price_label"
-            app:layout_constraintLeft_toRightOf="@id/text_total_price_label" />
+            app:layout_constraintLeft_toRightOf="@id/text_total_price_label"
+            app:layout_constraintTop_toTopOf="@id/text_total_price_label" />
 
         <Button
             android:id="@+id/transaction_button"
@@ -135,9 +141,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Go"
+            android:text="@string/go"
             app:layout_constraintLeft_toRightOf="@id/text_total_price"
-            app:layout_constraintTop_toBottomOf="@id/text_quantity_desired"/>
+            app:layout_constraintTop_toBottomOf="@id/text_quantity_desired" />
 
 
     </android.support.constraint.ConstraintLayout>
