--- a/app/src/main/res/layout/planet_activity.xml
+++ b/app/src/main/res/layout/planet_activity.xml
@@ -295,7 +295,7 @@
                     android:layout_height="95dp"
                     app:srcCompat="@drawable/rectangle"
                     android:visibility="invisible"
-                    nadroid:contentDescription="fuel bar"
+                    android:contentDescription="fuel bar"
                     />
                 <ImageView
                     android:id="@+id/fuelbar6"
