--- a/app/src/main/res/layout/tab_view_activity.xml
+++ b/app/src/main/res/layout/tab_view_activity.xml
@@ -8,9 +8,7 @@
     <TabHost
         android:id="@+id/tabHost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
